# mat-neuron

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_wheels.yml  python_tests.yml
include/: README.md
mat_neuron/: __init__.py  _model.cpp  _pymodel.py  _version.py  core.py  model.c  model.pyx
src/: model.cpp  modelo.cpp
test/: test_model.py
