[build-system]
requires = ["setuptools >= 42", "wheel", "pybind11 >= 2.10"]

[project]
name = "mat-neuron"
version = "0.4.4"
description = "Python code to integrate and evaluate likelihood for MAT neuron model"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["neuroscience", "simulation"]
license = {text = "BSD-3-Clause"}
authors = [
    {name = "C Daniel Meliza", email = "dan@meliza.org"},
]
maintainers = [
    {name = "C Daniel Meliza", email = "dan@meliza.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",    
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Natural Language :: English",
]
dependencies = [
    "numpy >= 2.0.2",
]

[project.urls]
homepage = "https://github.com/melizalab/mat-neuron"

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.cibuildwheel.linux]
before-all = "yum install eigen3"
test-command = "echo 'installed'"

[tool.cibuildwheel.macos]
before-all = "brew install eigen"
test-command = "echo 'installed'"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add eigen-dev"