[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.10"]
build-backend = "scikit_build_core.build"

[project]
name = "mat-neuron"
version = "0.4.4"
description = "Python code to integrate and evaluate likelihood for MAT neuron model"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["neuroscience", "simulation"]
license = {text = "BSD-3-Clause"}
authors = [
    {name = "C Daniel Meliza", email = "dan@meliza.org"},
]
maintainers = [
    {name = "C Daniel Meliza", email = "dan@meliza.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Natural Language :: English",
]
dependencies = [
    "numpy >= 2.0.2",
]

[project.urls]
homepage = "https://github.com/melizalab/mat-neuron"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.3",
    "scipy>=1.15.3",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = ["mat_neuron"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["build", "attic", "include"]

[tool.ruff.lint]
extend-select = [
    "F",  # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "PGH", # pygrep-hooks
    "RUF", # Ruff-specific
    "UP",  # pyupgrade
    "NPY201", # numpy 2.0
]

[tool.cibuildwheel]
skip= "cp314t-*"
test-requires = "pytest pytest-cov"
test-command = "pytest {project}/test"
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"

[tool.cibuildwheel.linux]
before-all = "yum install eigen3"
test-command = "echo 'installed'"

[tool.cibuildwheel.macos]
before-all = "brew install eigen"
test-command = "echo 'installed'"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add eigen-dev"
